<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    app:cardCornerRadius="8dp"
    app:cardElevation="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:id="@+id/close_dialog"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="end"
            android:contentDescription="@string/close"
            android:padding="8dp"
            android:src="@drawable/ic_round_close_24" />


        <ImageView
            android:id="@+id/app_logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="40dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/logo_icon" />

        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:layout_marginTop="8dp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:text="@string/app_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="0dp"
            android:textStyle="normal"
            android:layout_marginTop="8dp"
            android:text="@string/developed_by_rabi_shankar"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="0dp"
            android:layout_marginTop="8dp"
            android:textStyle="normal"
            android:text="@string/https_rabi_shankar_github_io_resume"
            android:textColor="@color/purple_700" />

        <TextView
            android:id="@+id/app_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:layout_marginBottom="32dp"
            android:text="@string/assignment_mobile_app_development_on_iraitech_innovations_amp_technologies" />

    </LinearLayout>
</androidx.cardview.widget.CardView>