<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:padding="8dp">

    <TextView
        android:id="@+id/sectionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        tools:text="Section x [ name ]"
        android:ellipsize="end"
        android:maxLines="1"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@id/btn_add"/>

    <ImageView
        android:id="@+id/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:src="@drawable/ic_round_add_24"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:clickable="true"
        android:focusable="true"
        android:background="?selectableItemBackground"/>

    <LinearLayout
        android:id="@+id/lecture_recycler_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sectionText"
        android:orientation="horizontal">

        <View
            android:layout_width="4dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:background="@android:color/holo_blue_dark"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/lecture_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:overScrollMode="never"
            app:layoutManager="LinearLayoutManager"
            tools:listitem="@layout/item_lecture"
            tools:itemCount="2"/>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/add_lecture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lecture_recycler_layout"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:visibility="gone">

        <EditText
            android:id="@+id/lecture_edit"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/stroke_box"
            android:gravity="center_vertical"
            android:hint="@string/add_new_lecture"
            android:textSize="14sp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:maxLines="1"/>

        <Button
            android:id="@+id/btn_save"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/lecture_edit"
            android:text="@string/save"
            android:backgroundTint="@android:color/holo_green_dark"
            android:textColor="@color/white"
            android:padding="12dp"
            android:layout_marginTop="12dp"
            android:layout_alignParentStart="true"/>

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/lecture_edit"
            android:text="@string/cancel"
            android:backgroundTint="@android:color/holo_red_dark"
            android:textColor="@color/white"
            android:padding="12dp"
            android:layout_marginTop="12dp"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

</RelativeLayout>